[package]
name = "jito-block-engine-proxy-server"
version = "0.1.0"
authors = ["Jito Team <team@jito.wtf>"]
edition = "2021"
description = "A sample proxy server to sign and forward json rpc requests"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
clap = { version = "4", features = ["cargo", "derive", "env"] }
futures-util = "0.3.29"
http = "0.2.11"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
solana-sdk = "=1.16"
tokio = { version = "1.14.1", features = ["full"] }

[workspace]

