[package]
name = "jito-searcher-client"
version = "0.1.0-beta"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
bytes = "1.4"
futures = "0.3"
futures-util = "0.3"
jito-protos = { path = "../protos" }
log = "0.4.17"
prost-types = "0.11.8"
solana-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-perf = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
thiserror = "1.0.39"
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls"] }
