[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.7"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
jito-protos = { path = "../../protos" }
log = "0.4.17"
prost-types = "0.11.8"
rand = "0.8.5"
jito-searcher-client = { path = "../../searcher_client" }
solana-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
solana-transaction-status = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.16-jito" }
thiserror = "1.0.40"
tokio = "1.27.0"
tonic = { version = "0.8.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
